RESOLVED FIXED107339
Event target rects on the top level document shouldn't be clipped.
https://bugs.webkit.org/show_bug.cgi?id=107339
Summary Event target rects on the top level document shouldn't be clipped.
Levi Weintraub
Reported 2013-01-18 16:25:03 PST
We were using the clippedOverflowRectForRepaint for (touch) event listeners on the Document/DOMWindow, but that's only correct for child documents, as the top-level view is clipped to the viewport. Instead we should use the documentRect.
Attachments
Patch (10.58 KB, patch)
2013-01-18 16:44 PST, Levi Weintraub
no flags
Levi Weintraub
Comment 1 2013-01-18 16:44:13 PST
WebKit Review Bot
Comment 2 2013-01-21 16:33:25 PST
Comment on attachment 183574 [details] Patch Clearing flags on attachment: 183574 Committed r140370: <http://trac.webkit.org/changeset/140370>
WebKit Review Bot
Comment 3 2013-01-21 16:33:28 PST
All reviewed patches have been landed. Closing bug.
Nico Weber
Comment 4 2013-01-21 17:36:27 PST
platform/chromium/fast/events/touch/touch-hit-rects-in-iframe.html started failing on chromium/mac after this CL: http://build.webkit.org/builders/Chromium%20Mac%20Release%20%28Tests%29/builds/32187/steps/layout-test/logs/stdio Is this intentional?
Levi Weintraub
Comment 5 2013-01-21 17:37:30 PST
Taking a look...
Levi Weintraub
Comment 6 2013-01-21 17:40:53 PST
Just needed new baselines. Committed r140374: <http://trac.webkit.org/changeset/140374>
Note You need to log in before you can comment on or make changes to this bug.